# HurricaneLossModel

./: .gitignore  README.md  pyproject.toml
hurricane_loss_model/: cli.py  model.py
scripts/: efficiency.py
tests/: test_cli.py  test_model.py
