[tool.poetry]
name = "hurricane_loss_model"
version = "0.1.0"
description = ""
authors = ["Vinul Wimalaweera"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gethurricaneloss = "hurricane_loss_model.cli:main"
